test/negative/108_positional_after_named.fx
// expect: positional
fun g(~a: int, ~b: int) = a + b
println(g(a=1, 2))
